--- a/login/login-render-engine-impl/impl/src/webapp/vm/defaultskin/choice.vm
+++ b/login/login-render-engine-impl/impl/src/webapp/vm/defaultskin/choice.vm
@@ -18,18 +18,18 @@
 			<aside class="logo"></aside>
 			<p class="msg">${choiceRequired}</p>
 			<fieldset>
-				<a class="link" href="${containerLoginUrl}" title="${loginTitle}">
-					#if("$containerLoginChoiceIcon" != "")
-						<img src="${containerLoginChoiceIcon}" alt="${containerLoginChoiceText}" />
-					#end
-					${containerLoginChoiceText}
-				</a>
 				<a class="link" href="${xloginUrl}" title="${loginTitle2}">
 					#if("$xloginChoiceIcon" != "")
 						<img src="${xloginChoiceIcon}" alt="${xloginChoiceText}" />
 					#end
 					${xloginChoiceText}
 				</a>
+				</a>
+				<a class="link" href="${xloginUrl}" title="${loginTitle2}">
+					#if("$xloginChoiceIcon" != "")
+						<img src="${xloginChoiceIcon}" alt="${xloginChoiceText}" />
+					#end
+					${xloginChoiceText}
 			</fieldset>
 		</div>
 		<!-- end choice.vm -->
