Updating login order

--- a/login/login-render-engine-impl/impl/src/webapp/vm/defaultskin/choice.vm
+++ b/login/login-render-engine-impl/impl/src/webapp/vm/defaultskin/choice.vm
@@ -24,12 +24,12 @@
 					#end
 					${xloginChoiceText}
 				</a>
-				</a>
-				<a class="link" href="${xloginUrl}" title="${loginTitle2}">
-					#if("$xloginChoiceIcon" != "")
-						<img src="${xloginChoiceIcon}" alt="${xloginChoiceText}" />
-					#end
-					${xloginChoiceText}
+                                <a class="link" href="${containerLoginUrl}" title="${loginTitle}">
+                                        #if("$containerLoginChoiceIcon" != "")
+                                                <img src="${containerLoginChoiceIcon}" alt="${containerLoginChoiceText}" />
+                                        #end
+                                        ${containerLoginChoiceText}
+                                </a>
 			</fieldset>
 		</div>
 		<!-- end choice.vm -->
